# Video_Explain_Agent

./: Dockerfile  FLASK_APP_GUIDE.md  QUICK_START.md  README.md  pyproject.toml  report.md  run_app.py  run_flask.bat  run_flask.sh
src/reviewai/: crew.py  flask_app.py  main.py
src/reviewai/config/: agents.yaml
src/reviewai/static/: style.css
src/reviewai/templates/: index.html  result.html
src/reviewai/tools/: custom_tool.py
