[project]
name = "reviewai"
version = "0.1.0"
description = "reviewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11,<3.13"
dependencies = [
    "crewai[tools]==1.9.3",
    "flask>=3.0.0",
    "litellm>=1.75.3",
    "requests>=2.31.0",
]

[project.scripts]
reviewai = "reviewai.main:run"
run_crew = "reviewai.main:run"
train = "reviewai.main:train"
replay = "reviewai.main:replay"
test = "reviewai.main:test"
run_with_trigger = "reviewai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
